Fix overflow Roadmap

--- a/src/containers/Roadmap/Roadmap.scss
+++ b/src/containers/Roadmap/Roadmap.scss
@@ -33,12 +33,14 @@
       display: none;
 
       @media (max-width: 991px) {
+        margin-top: 8rem;
         display: block;
       }
     }
 
     &.horizontal {
-      margin-top: 15rem;
+      margin-top: -26rem;
+      min-height: 100rem;
 
       @media (max-width: 991px) {
         display: none;
